--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
         reliable website designer and developer who can deliver excellent results for your clients. Want to know more?
         Please send me a message.</p>
 
-      <form id="contact-form" action="/send-message.php">
+      <form id="contact-form" action="https://getform.io/f/e7c6dff1-8b46-452d-bbbd-3f0eb33c73b7" method="POST">
         <label for="name">Name:</label><br>
         <input type="text" id="name" name="name"><br>
         <label for="email">Email:</label><br>
         <input type="email" id="email" name="email"><br>
         <label for="message">Message:</label><br>
-        <textarea id="message" name="message"></textarea><br>
+        <textarea id="message" name="message" cols='30' rows='10'></textarea><br>
         <input type="submit" value="Send Message" class="btn">
       </form>
 
