--- a/index.html
+++ b/index.html
@@ -39,13 +39,7 @@
         experience,
         combined with
         my IT background, make me an ideal candidate for your role. I am eager to contribute my expertise to your team
-        and help drive the success of your business.
-      <p class="intro">I am a skilled developer with a strong foundation in HTML, CSS, JavaScript, and Python. I hold a
-        Master degree in Information Technology from Monash University. I am confident that my technical consultant
-        experience,
-        combined with
-        my IT background, make me an ideal candidate for your role. I am eager to contribute my expertise to your team
-        and help drive the success of your business.
+        and help drive the success of your business.</p>
     </div>
     <hr>
     <h1>My Favourite Projects</h1>
@@ -56,11 +50,6 @@
         platform website to showcase different services. <a
           href="https://iuliiavinogradova.github.io/learning-platform/">View</a></p>
       <img class="project-img" src="images/learning-platform.png" alt="learning-platform-img">
-      <h2>Learning Platform</h2>
-      <p>Front-end design (HTML, CSS, Bootstrap) with home, signin, signup, contact, feedback pages for a learning
-        platform website to showcase different services. <a
-          href="https://iuliiavinogradova.github.io/learning-platform/">View</a></p>
-      <img class="project-img" src="images/learning-platform.png" alt="learning-platform-img">
     </div>
 
     <div class="card">
@@ -69,18 +58,9 @@
         cloud-based storage, Restful API for user
         details, and Movie database API for retrieving movie details<a href="https://youtu.be/ctzYjl8DLjo">View</a></p>
       <img class="project-img" src="images/android.png" alt="android-app-img">
-      <h2>My Movie Memoir</h2>
-      <p>Android app (Java) with 4 databases: SQLite for storing user history, Firebase for
-        cloud-based storage, Restful API for user
-        details, and Movie database API for retrieving movie details<a href="https://youtu.be/ctzYjl8DLjo">View</a></p>
-      <img class="project-img" src="images/android.png" alt="android-app-img">
     </div>
 
     <div class="card">
-      <h2>AgelessFun</h2>
-      <p>AgelessFun website (PHP, HTML, CSS, JavaScript) won Monash Postgraduate Industry Experience EXPO-2020 in the
-        category of: "Older Australians at Play"<a href="https://youtu.be/PtkbFpQYVWI">View</a></p>
-      <img class="project-img" src="images/agelessfun.png" alt="agelessfun-img">
       <h2>AgelessFun</h2>
       <p>AgelessFun website (PHP, HTML, CSS, JavaScript) won Monash Postgraduate Industry Experience EXPO-2020 in the
         category of: "Older Australians at Play"<a href="https://youtu.be/PtkbFpQYVWI">View</a></p>
@@ -102,8 +82,6 @@
           staying
           up-to-date on the latest trends and techniques make me a suitable candidate for a website designer and
           developer role.</p>
-        up-to-date on the latest trends and techniques make me a suitable candidate for a website designer and
-        developer role.</p>
 
       </div>
       <div class="skill-row">
@@ -114,7 +92,6 @@
           a deep understanding of its concepts and am able to communicate them effectively to others. I am patient and
           able to
           adapt my teaching style to meet the needs of individual students.</p>
-        adapt my teaching style to meet the needs of individual students.</p>
 
       </div>
     </div>
@@ -133,8 +110,6 @@
         <input type="text" id="name" name="name"><br>
         <label for="email">Email:</label><br>
         <input type="email" id="email" name="email"><br>
-        <label for="phone">Phone:</label><br>
-        <input type="tel" id="phone" name="phone"><br>
         <label for="message">Message:</label><br>
         <textarea id="message" name="message" cols='30' rows='10'></textarea><br>
         <input type="submit" value="Send Message" class="btn">
