Add new website

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 
   <div class="top-container">
     <div class="title-text">
-      <h1>Hello, world </h1>
-      <h2> I am <span class="pro">Iuliia.</span></h2>
+      <h1>Hi, I am Iuliia</h1>
+      <h2><a href="https://portfolio-nextjs-iuliiavinogradova.vercel.app">Please visit my new portfolio website in <span
+            class="pro">Next.js</span></a></h2>
     </div>
   </div>
 
